manifests/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 3
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: heroacr007.azurecr.io/todo-ui:v1
        ports:
        - containerPort: 80
        # env:
        # - name: CONNECTION_STRING
        #   value: "Driver={ODBC Driver 18 for SQL Server};Server=tcp:heromssqlserver007.database.windows.net,1433;Database=heromssqldb007;Uid=achinta;Pwd={your_password_here};Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
