manifests/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  labels:
    app: ui
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: ui-task.achinta.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ui
            port: 
              number: 80
